--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,11 +1,14 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=eOrders - XEVEN.com.ar\nAuthor: Pablo Acevedo\nEmail: eorders@xeven.com.ar
+application.homepage=xeven.com.ar/eorders
+application.splash=/Users/pacevedo/Downloads/xeven.jpeg
 application.title=eOrders
-application.vendor=educacionit
+application.vendor=XEVEN
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,15 +33,19 @@ dist.jar=${dist.dir}/eOrders.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.1.jar=lib/gson-2.8.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.gson-2.8.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -48,8 +55,8 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
+javadoc.additionalparam=-header "eOrders - XEVEN.com.ar"
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -57,19 +64,27 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-javafx.application.implementation.version=1.0
+javadoc.version=true
+javadoc.windowtitle=eOrders - XEVEN.com.ar
+javafx.application.implementation.version=1.5
 javafx.binarycss=false
 javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=true
+javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
+javafx.deploy.icon=
+javafx.deploy.icon.native=
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=true
+javafx.deploy.permissionselevated=false
+javafx.deploy.splash=../../Downloads/xeven.jpeg
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -79,6 +94,12 @@ javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
 javafx.main.class=ar.com.xeven.EOrders
+javafx.manifest.entry.0.name=Author
+javafx.manifest.entry.0.value=Pablo Acevedo Areco
+javafx.manifest.entry.1.name=Owner
+javafx.manifest.entry.1.value=XEVEN.com.ar
+javafx.manifest.entry.2.name=Contacto
+javafx.manifest.entry.2.value=info@xeven.com.ar
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -90,6 +111,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=self
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -100,11 +124,15 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
+native.bundling.enabled=false
 platform.active=default_platform
+project.license=gpl30
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.MySQLDriver.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
